--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <!-- custom css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
    
   
 </head>
@@ -79,7 +79,7 @@
         </div>
             
         <div class="home-imgHover">
-           <img src="images/home.jpg" alt="">
+           <img src="home.jpg" alt="">
         </div>
 
 
@@ -92,7 +92,7 @@
     <h2 class="heading">About <span>Me</span></h2>
 
     <div class="about-img">
-        <img src="images/profile-img.gif" alt="">
+        <img src="profile-img.gif" alt="">
     </div>
 
      <div class="about-content">
@@ -124,7 +124,7 @@
         <div class="education-box">
             <div class="education-content">
                 <div class="content">
-                    <img src="images/iscte.png" style="height: 100px; width: 100px;" alt="">
+                    <img src="iscte.png" style="height: 100px; width: 100px;" alt="">
                     <div class="year"><i class='bx bxs-calendar'>2023-2024</i></div>
                     <h3>Postgraduate Degree in Informatics Applied to Organizations</h3>
                     <p> - Model and develop organizational information systems;
@@ -137,7 +137,7 @@
 
             <div class="education-content">
                 <div class="content">
-                    <img src="images/assembly.jpg" style="height: 100px; width: 100px;" alt="">
+                    <img src="assembly.jpg" style="height: 100px; width: 100px;" alt="">
                     <div class="year"><i class='bx bxs-calendar'>2022-2023</i></div>
                     <h3>Academy Junior Developer</h3>
                     <p>1. Introduction to Programming (C#)
@@ -152,7 +152,7 @@
 
             <div class="education-content">
                 <div class="content">
-                    <img src="images/cousera.png" style="height: 100px; width: 100px;" alt="">
+                    <img src="cousera.png" style="height: 100px; width: 100px;" alt="">
                     <div class="year"><i class='bx bxs-calendar'>2023</i></div>
                     <h3>Fundamentals of Project Management</h3>
                      <p>- Describe project management skills, roles, and responsibilities in a variety of industries.
@@ -163,7 +163,7 @@
 
             <div class="education-content">
                 <div class="content">
-                    <img src="images/udemy.jpg" style="height: 100px; width: 100px;" alt="">
+                    <img src="udemy.jpg" style="height: 100px; width: 100px;" alt="">
                     <div class="year"><i class='bx bxs-calendar'>2023</i></div>
                     <h3>Curso Completo Web Developer</h3>
                     <p>- Know the fundamentals of ASP .NET Core MVC to create dynamic web sites with data access;
@@ -178,7 +178,7 @@
 
             <div class="education-content">
                 <div class="content">
-                    <img src="images/udemy.jpg" style="height: 100px; width: 100px;" alt="">
+                    <img src="udemy.jpg" style="height: 100px; width: 100px;" alt="">
                     <div class="year"><i class='bx bxs-calendar'>2023</i></div>
                     <h3>Complete Web Development with 20 projects</h3>
                     <p>1. HTML5 <br> 2. CSS3 <br> 3.CSS3 Intermediate & Advanced <br> 4.HTML5 and CSS3 - Special Features <br> 5.Bootstrap 4 & Responsive Design <br> 6.JavaScript <br> 7.Modern JavaScript (ECMAScript 2015 - ES6) and Object Orientation <br> 8.PHP 7 <br> 9.PHP 7 and Object Orientation <br> 10.MySQL database <br> 11. Ajax <br> 12. PHP with PDO <br> 13. Publishing Web applications on the Internet <br> 14. JQuery <br> 15. MVC architecture pattern with PHP<br> 16. PHP 7 & MySQL - Twitter Clone Applied Project<br> 17. API with Slim Framework<br> 18. Introduction to WordPress (Blogging)<br> 19. SASS<br> 20. Creating Mobile Applications with IONIC</p>
@@ -187,7 +187,7 @@
 
             <div class="education-content">
                 <div class="content">
-                    <img src="images/ipbeja.png" style="height: 100px; width: 100px;" alt="">
+                    <img src="ipbeja.png" style="height: 100px; width: 100px;" alt="">
                     <div class="year"><i class='bx bxs-calendar'>2011-2015</i></div>
                     <h3>Degree in Nurse</h3>
                     <p>I studied nursing science for 4 years. <br> I finished the course with an average of 15 values.</p>
@@ -234,7 +234,7 @@
 <img>
 <div class="projects-container">
     <div class="projects-box">
-        <img src="images/c-sharp.png" style="height: 50px; width: 50px;" alt="">
+        <img src="c-sharp.png" style="height: 50px; width: 50px;" alt="">
         <h3>C#</h3>
         <p>Create games with lines of code with programming logic.</p>
     <a href="https://github.com/Bioca93/TicTacToe" class="btn" style="color: aqua;">View Projects</a>
@@ -271,7 +271,7 @@
     </div>
 
     <div class="projects-box">
-        <img src="images/sql.png" style="height: 50px; width: 50px;" alt="">
+        <img src="sql.png" style="height: 50px; width: 50px;" alt="">
         <h3>SQL SERVER</h3>
         <p>Applied related to the code developed in C# in several developed projects.
         <br> - Classroom management; <a href="#" class="btn" style="color: aqua;">View Project (SOON)</a>
