--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
 
         <div class="btn-box">
-            <a href="CV_Beatriz_Ressurreicao.pdf" class="btn">Download CV</a>
+            <a href="CV_BeatrizRessurreicao_2023.pdf" class="btn">Download CV</a>
             <a href="#contact" class="btn">Let´s Talk</a>
         </div>
             
